Added endpoints for uploading and updating images, de-coupling this logic from experience creation and updating (#50)
